# RustMarketDataCollectionPerformanceOptimization

./: Cargo.toml  README.md  README_zh.md
benches/: mark_price_parsers.rs
src/: main.rs
