[package]
name = "RustMarketDataCollectionPerformanceOptimization"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
mimalloc = "0.1.43"
rustls = { version = "0.23.20", features = ["ring"] }
sonic-rs = "0.3.17"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots"] }
crossbeam-utils = "0.8.21"


[profile.release]
opt-level = 3  # 最大优化级别
lto = true     # 启用 Link Time Optimization (LTO), 将各个模块在链接时进行优化，有助于消除冗余并提升性能
codegen-units = 1  # 使用单个代码生成单元，提升优化效果
debug = false  # 关闭调试信息
panic = 'abort'  # 使用最小化 panic 处理，以提高性能
incremental = false  # 禁用增量编译（只适用于开发阶段）
overflow-checks = false  # 禁用溢出检查，以提高性能

[dev-dependencies]
criterion = "0.5"
logos = "0.15.0"
fast-float2 = "0.2.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[[bench]]
name = "mark_price_parsers"
harness = false